# subtidal

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
assets/: subtidal.desktop
assets/icons/hicolor/: index.theme
docs/design-plans/: 2026-02-22-live-captions.md  2026-02-26-nemotron-cpu-fallback.md  2026-02-27-line-fill-captions.md
docs/implementation-plans/2026-02-22-live-captions/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  phase_06.md  phase_07.md  phase_08.md  test-requirements.md
docs/implementation-plans/2026-02-26-nemotron-cpu-fallback/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  test-requirements.md
docs/implementation-plans/2026-02-27-line-fill-captions/: phase_01.md  phase_02.md  phase_03.md  test-requirements.md
docs/test-plans/: 2026-02-22-live-captions.md  2026-02-26-nemotron-cpu-fallback.md  2026-02-27-line-fill-captions.md
src/: config.rs  main.rs
src/audio/: mod.rs  resampler.rs
src/models/: mod.rs
src/overlay/: input_region.rs  mod.rs
src/stt/: mod.rs  moonshine.rs  nemotron.rs  parakeet.rs
src/tray/: mod.rs
tests/: cli.rs  no_moonshine_refs.rs
